[gd_scene load_steps=3 format=3 uid="uid://bmaihwolwmxgh"]

[ext_resource type="Script" path="res://ui.gd" id="1_7tofr"]
[ext_resource type="Texture2D" uid="uid://dt5ltt81t63ue" path="res://hexoutline.png" id="1_jldmc"]

[node name="UI" type="Node2D"]
script = ExtResource("1_7tofr")

[node name="ScreenSpace" type="CanvasLayer" parent="."]

[node name="RightPanel" type="Panel" parent="ScreenSpace"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScreenSpace/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="GridContainer1" type="VBoxContainer" parent="ScreenSpace/RightPanel/MarginContainer"]
layout_mode = 2

[node name="TowerButtonsContainer" type="GridContainer" parent="ScreenSpace/RightPanel/MarginContainer/GridContainer1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="TowerDescription" type="RichTextLabel" parent="ScreenSpace/RightPanel/MarginContainer/GridContainer1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="SelectedHexagon" type="Sprite2D" parent="."]
visible = false
position = Vector2(-97, -55)
texture = ExtResource("1_jldmc")
